feat: :sparkles: se añadio entidades y configuracion para base de datos

--- a/ApiSkeleton4/appsettings.Development.json
+++ b/ApiSkeleton4/appsettings.Development.json
@@ -6,12 +6,12 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection":"server=localhost; user=root; password=123456; database=skeleton4capas"
+    "DefaultConnection":"server=localhost; user=root; password=123456; database=veterinariaTatiana"
   },
   "JWT":{
     "Key":"C8rRTXAbSd^5Khd9v8a8XZQ%vB4aGu@QrR3jYmoGC2YK4iv73Wy9L%u9xV3bxgAHMeN5w5g4#eKUo!djsZYS$H^!BX&@omQ8MMS@7%KwP###pTzYRhjUbcU%bNHzGrZ$@6uB7KQeonZ!d6YbFoqcJK4aPa842A%zHe5r7$6CQo^qzBrfFL^B!6UE@AbQZuzysfh$HH&Wqq@oRguv7Ea8UnDxrtUFJepqN!9$e%$^ozZxh#@97#j2c#d&M8uqfzSkvVVBjZxxyDPvokZWp%YKTtrwGAUTLbYk%ypH$qRWw3YJMG9qyA3e5FkBY95ayA2xagXtpb6HjUzFqrn8#fLkUx^cj!vwp4CjKNt#LyUDNi^b2s!KrtLtigENYe&xs8$kK3eA$SnDwt3vUywR$YNf27UNjb3TJSqumExY7cAWeg&R&x^qAdtpXRffTZFn$3tW$UPpq^RiPv#SA87^vDAN%HeZ5$zR%Tr$QT6gRs!uai522yiAydrnnSDGnBjP8D94",
-    "Issuer":"ApiSkeleton4",
-    "Audience":"ApiSkeleton4",
+    "Issuer":"ApiVeterinaria",
+    "Audience":"ApiVeterinaria",
     "DurationInMinutes":20
   }
 }
